<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_center" />

    <com.neopixl.pixlui.components.textview.TextView
        style="@style/AppTheme.StyledText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:text="@string/forgot_password_message"
        android:textColor="@color/black" />

    <com.egnese.eggwallet.ui.CustomEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@mipmap/abc_alpha_et_phone"
        android:drawablePadding="15dp"
        android:hint="@string/phone"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#DDAAAAAA"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="fill_parent"

            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/abc_alpha_btn_background"
            android:text="@string/reset_password"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
