<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/paper"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.egnese.eggwallet.ui.CustomEditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@mipmap/abc_alpha_et_phone"
            android:drawablePadding="15dp"
            android:hint="@string/otp"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#DDAAAAAA"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.egnese.eggwallet.ui.CustomEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/abc_alpha_et_password"
                android:drawablePadding="15dp"
                android:hint="@string/register_activity_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#DDAAAAAA"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp">

            </com.egnese.eggwallet.ui.CustomEditText>

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/txtShowPassword"
                style="@style/AppTheme.StyledText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/etPassword"
                android:layout_alignRight="@+id/etPassword"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:text="show"
                android:textColor="@color/hide_text_color" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.egnese.eggwallet.ui.CustomEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/abc_alpha_et_password"
                android:drawablePadding="15dp"
                android:hint="@string/register_activity_reenter_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#DDAAAAAA"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp">

            </com.egnese.eggwallet.ui.CustomEditText>

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/txtShowConfirmPassword"
                style="@style/AppTheme.StyledText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/etConfirmPassword"
                android:layout_alignRight="@+id/etConfirmPassword"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:text="show"
                android:textColor="@color/hide_text_color" />

        </RelativeLayout>

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            style="@style/AppTheme.StyledText"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/black"
            android:visibility="visible" />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            style="@style/AppTheme.StyledText"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:text="@string/confirm_otp_resend"
            android:textColor="@color/black"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnConfirmOTP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/abc_alpha_btn_background"
            android:text="@string/continue_otp"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
